Fix z-index header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@ a {
 .header.fixed {
     position: sticky;
     top: -28px;
+    z-index: 1;
 }
 
 .header .header-body {
